[🐛 Fix] Responsive : Fix h1 size on mobile

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -260,4 +260,8 @@ path.link {
   .centeredTitle {
     padding-top: 15vh;
   }
+
+  h1 {
+    font-size: 8.5vw;
+  }
 }
